[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeHSelectB.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeH.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ButtonTypeH" type="Button"]
margin_right = 752.0
margin_bottom = 37.0
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 1
custom_colors/font_color_disabled = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_focus = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_hover = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 2 )
action_mode = 0
text = "Test"
flat = true
clip_text = true
align = 0
script = ExtResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
